--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "i": "^0.3.7",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "mongoose": "^6.0.0",
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1",
+    "npm": "^9.8.1"
   }
 }
